ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eks-tutorial-ingress
  namespace: eks-tutorial
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: nginx-service
              servicePort: 80
